grammar/.antlr/TypescriptToPythonParser.java
// Generated from /Users/lerfich/Documents/antlr/grammar/TypescriptToPython.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TypescriptToPythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, CONSOLELOG=14, IF=15, ELSE=16, 
		COMPAREOPERATION=17, EQ=18, EQOPS=19, MATHOPERATION=20, INT=21, FLOAT=22, 
		BOOLEAN=23, STRING=24, WORD=25, WHITESPACE=26, NEWLINE=27, COMMENT=28, 
		EOL=29;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_declaration = 2, RULE_header = 3, 
		RULE_declarationArgs = 4, RULE_body = 5, RULE_statement = 6, RULE_deepStatement = 7, 
		RULE_returnFunctionValue = 8, RULE_resultValue = 9, RULE_protectedMethod = 10, 
		RULE_consoleLog = 11, RULE_variableDeclation = 12, RULE_conditionIf = 13, 
		RULE_conditionBar = 14, RULE_leftBar = 15, RULE_conditionBarRule = 16, 
		RULE_rightBar = 17, RULE_elseCondition = 18, RULE_objectProperty = 19, 
		RULE_propertyTitle = 20, RULE_objectMethodExec = 21, RULE_methodExec = 22, 
		RULE_methodArgs = 23, RULE_comments = 24, RULE_methodName = 25, RULE_type = 26, 
		RULE_variable = 27, RULE_operationsWithVariable = 28, RULE_leftOperation = 29, 
		RULE_rightOperation = 30, RULE_valueOfVariable = 31, RULE_structure = 32, 
		RULE_structureDeclaration = 33, RULE_structureArguments = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "declaration", "header", "declarationArgs", 
			"body", "statement", "deepStatement", "returnFunctionValue", "resultValue", 
			"protectedMethod", "consoleLog", "variableDeclation", "conditionIf", 
			"conditionBar", "leftBar", "conditionBarRule", "rightBar", "elseCondition", 
			"objectProperty", "propertyTitle", "objectMethodExec", "methodExec", 
			"methodArgs", "comments", "methodName", "type", "variable", "operationsWithVariable", 
			"leftOperation", "rightOperation", "valueOfVariable", "structure", "structureDeclaration", 
			"structureArguments"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'function'", "'('", "')'", "','", "'{'", "'}'", "'return'", "'['", 
			"']'", "'.'", "'const'", "'let'", "'new'", "'console.log'", "'if'", "'else'", 
			null, "'='", null, null, null, null, null, null, null, null, null, null, 
			"';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "CONSOLELOG", "IF", "ELSE", "COMPAREOPERATION", "EQ", "EQOPS", 
			"MATHOPERATION", "INT", "FLOAT", "BOOLEAN", "STRING", "WORD", "WHITESPACE", 
			"NEWLINE", "COMMENT", "EOL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TypescriptToPython.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TypescriptToPythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TypescriptToPythonParser.EOF, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__6) | (1L << T__10) | (1L << T__11) | (1L << CONSOLELOG) | (1L << IF) | (1L << WORD) | (1L << COMMENT))) != 0)) {
				{
				setState(70);
				declarations();
				}
			}

			setState(73);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(77);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(75);
					declaration();
					}
					break;
				case T__6:
				case T__10:
				case T__11:
				case CONSOLELOG:
				case IF:
				case WORD:
				case COMMENT:
					{
					setState(76);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__6) | (1L << T__10) | (1L << T__11) | (1L << CONSOLELOG) | (1L << IF) | (1L << WORD) | (1L << COMMENT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode EOL() { return getToken(TypescriptToPythonParser.EOL, 0); }
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			header();
			setState(82);
			body();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EOL) {
				{
				setState(83);
				match(EOL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public MethodNameContext methodName() {
			return getRuleContext(MethodNameContext.class,0);
		}
		public DeclarationArgsContext declarationArgs() {
			return getRuleContext(DeclarationArgsContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__0);
			setState(87);
			methodName();
			setState(88);
			match(T__1);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORD) {
				{
				setState(89);
				declarationArgs();
				}
			}

			setState(92);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationArgsContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(TypescriptToPythonParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(TypescriptToPythonParser.WORD, i);
		}
		public DeclarationArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationArgs; }
	}

	public final DeclarationArgsContext declarationArgs() throws RecognitionException {
		DeclarationArgsContext _localctx = new DeclarationArgsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarationArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(WORD);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(95);
				match(T__3);
				setState(96);
				match(WORD);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__4);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__10) | (1L << T__11) | (1L << CONSOLELOG) | (1L << IF) | (1L << WORD) | (1L << COMMENT))) != 0)) {
				{
				{
				setState(103);
				statement();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public DeepStatementContext deepStatement() {
			return getRuleContext(DeepStatementContext.class,0);
		}
		public TerminalNode EOL() { return getToken(TypescriptToPythonParser.EOL, 0); }
		public CommentsContext comments() {
			return getRuleContext(CommentsContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			deepStatement();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EOL) {
				{
				setState(112);
				match(EOL);
				}
			}

			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(115);
				comments();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeepStatementContext extends ParserRuleContext {
		public VariableDeclationContext variableDeclation() {
			return getRuleContext(VariableDeclationContext.class,0);
		}
		public OperationsWithVariableContext operationsWithVariable() {
			return getRuleContext(OperationsWithVariableContext.class,0);
		}
		public ConditionIfContext conditionIf() {
			return getRuleContext(ConditionIfContext.class,0);
		}
		public CommentsContext comments() {
			return getRuleContext(CommentsContext.class,0);
		}
		public ProtectedMethodContext protectedMethod() {
			return getRuleContext(ProtectedMethodContext.class,0);
		}
		public ObjectMethodExecContext objectMethodExec() {
			return getRuleContext(ObjectMethodExecContext.class,0);
		}
		public ObjectPropertyContext objectProperty() {
			return getRuleContext(ObjectPropertyContext.class,0);
		}
		public ReturnFunctionValueContext returnFunctionValue() {
			return getRuleContext(ReturnFunctionValueContext.class,0);
		}
		public MethodExecContext methodExec() {
			return getRuleContext(MethodExecContext.class,0);
		}
		public DeepStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deepStatement; }
	}

	public final DeepStatementContext deepStatement() throws RecognitionException {
		DeepStatementContext _localctx = new DeepStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_deepStatement);
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				variableDeclation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				operationsWithVariable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				conditionIf();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				comments();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				protectedMethod();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(123);
				objectMethodExec();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(124);
				objectProperty();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(125);
				returnFunctionValue();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(126);
				methodExec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnFunctionValueContext extends ParserRuleContext {
		public ResultValueContext resultValue() {
			return getRuleContext(ResultValueContext.class,0);
		}
		public ReturnFunctionValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnFunctionValue; }
	}

	public final ReturnFunctionValueContext returnFunctionValue() throws RecognitionException {
		ReturnFunctionValueContext _localctx = new ReturnFunctionValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_returnFunctionValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__6);
			setState(130);
			resultValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResultValueContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(TypescriptToPythonParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(TypescriptToPythonParser.INT, i);
		}
		public List<TerminalNode> BOOLEAN() { return getTokens(TypescriptToPythonParser.BOOLEAN); }
		public TerminalNode BOOLEAN(int i) {
			return getToken(TypescriptToPythonParser.BOOLEAN, i);
		}
		public List<TerminalNode> STRING() { return getTokens(TypescriptToPythonParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(TypescriptToPythonParser.STRING, i);
		}
		public List<TerminalNode> FLOAT() { return getTokens(TypescriptToPythonParser.FLOAT); }
		public TerminalNode FLOAT(int i) {
			return getToken(TypescriptToPythonParser.FLOAT, i);
		}
		public List<TerminalNode> WORD() { return getTokens(TypescriptToPythonParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(TypescriptToPythonParser.WORD, i);
		}
		public ResultValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resultValue; }
	}

	public final ResultValueContext resultValue() throws RecognitionException {
		ResultValueContext _localctx = new ResultValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_resultValue);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(149);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case INT:
						{
						setState(132);
						match(INT);
						}
						break;
					case BOOLEAN:
						{
						setState(133);
						match(BOOLEAN);
						}
						break;
					case STRING:
						{
						setState(134);
						match(STRING);
						}
						break;
					case FLOAT:
						{
						setState(135);
						match(FLOAT);
						}
						break;
					case WORD:
						{
						setState(136);
						match(WORD);
						}
						break;
					case T__7:
						{
						setState(137);
						match(T__7);
						setState(139);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING) | (1L << WORD))) != 0)) {
							{
							setState(138);
							_la = _input.LA(1);
							if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING) | (1L << WORD))) != 0)) ) {
							_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							}
						}

						setState(145);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==T__3) {
							{
							{
							setState(141);
							match(T__3);
							setState(142);
							_la = _input.LA(1);
							if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING) | (1L << WORD))) != 0)) ) {
							_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							}
							}
							setState(147);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(148);
						match(T__8);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(151); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProtectedMethodContext extends ParserRuleContext {
		public ConsoleLogContext consoleLog() {
			return getRuleContext(ConsoleLogContext.class,0);
		}
		public MethodArgsContext methodArgs() {
			return getRuleContext(MethodArgsContext.class,0);
		}
		public ProtectedMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_protectedMethod; }
	}

	public final ProtectedMethodContext protectedMethod() throws RecognitionException {
		ProtectedMethodContext _localctx = new ProtectedMethodContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_protectedMethod);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			consoleLog();
			setState(154);
			match(T__1);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOLEAN) | (1L << STRING) | (1L << WORD))) != 0)) {
				{
				setState(155);
				methodArgs();
				}
			}

			setState(158);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConsoleLogContext extends ParserRuleContext {
		public TerminalNode CONSOLELOG() { return getToken(TypescriptToPythonParser.CONSOLELOG, 0); }
		public ConsoleLogContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_consoleLog; }
	}

	public final ConsoleLogContext consoleLog() throws RecognitionException {
		ConsoleLogContext _localctx = new ConsoleLogContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_consoleLog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(CONSOLELOG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode EQ() { return getToken(TypescriptToPythonParser.EQ, 0); }
		public ValueOfVariableContext valueOfVariable() {
			return getRuleContext(ValueOfVariableContext.class,0);
		}
		public VariableDeclationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclation; }
	}

	public final VariableDeclationContext variableDeclation() throws RecognitionException {
		VariableDeclationContext _localctx = new VariableDeclationContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_variableDeclation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			type();
			setState(163);
			variable();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQ) {
				{
				setState(164);
				match(EQ);
				setState(165);
				valueOfVariable();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionIfContext extends ParserRuleContext {
		public ConditionBarContext conditionBar() {
			return getRuleContext(ConditionBarContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public ElseConditionContext elseCondition() {
			return getRuleContext(ElseConditionContext.class,0);
		}
		public ConditionIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionIf; }
	}

	public final ConditionIfContext conditionIf() throws RecognitionException {
		ConditionIfContext _localctx = new ConditionIfContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_conditionIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			conditionBar();
			setState(169);
			body();
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(170);
				elseCondition();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionBarContext extends ParserRuleContext {
		public LeftBarContext leftBar() {
			return getRuleContext(LeftBarContext.class,0);
		}
		public ConditionBarRuleContext conditionBarRule() {
			return getRuleContext(ConditionBarRuleContext.class,0);
		}
		public RightBarContext rightBar() {
			return getRuleContext(RightBarContext.class,0);
		}
		public ConditionBarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionBar; }
	}

	public final ConditionBarContext conditionBar() throws RecognitionException {
		ConditionBarContext _localctx = new ConditionBarContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_conditionBar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			leftBar();
			setState(174);
			conditionBarRule();
			setState(175);
			rightBar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeftBarContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(TypescriptToPythonParser.IF, 0); }
		public TerminalNode BOOLEAN() { return getToken(TypescriptToPythonParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(TypescriptToPythonParser.STRING, 0); }
		public TerminalNode WORD() { return getToken(TypescriptToPythonParser.WORD, 0); }
		public TerminalNode INT() { return getToken(TypescriptToPythonParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(TypescriptToPythonParser.FLOAT, 0); }
		public LeftBarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftBar; }
	}
